[gd_scene load_steps=6 format=3 uid="uid://gfbs0r3hpxmg"]

[ext_resource type="Script" path="res://code/collectibles/weapon_collectible.gd" id="1_qx1sj"]
[ext_resource type="Texture2D" uid="uid://codof3p1gelos" path="res://art/melee.png" id="2_ueqib"]
[ext_resource type="Texture2D" uid="uid://b54l47k6kwebj" path="res://art/ranged_weapon.png" id="3_xoqb8"]
[ext_resource type="Texture2D" uid="uid://dfi7lsm64yyw3" path="res://icon.svg" id="4_qd2m8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6p5eu"]
size = Vector2(26, 20)

[node name="weapon_collectible" type="Area2D"]
script = ExtResource("1_qx1sj")

[node name="MeleeSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ueqib")

[node name="RangedSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xoqb8")

[node name="GrappleSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.90735e-06, 0.5)
scale = Vector2(0.171875, 0.117188)
texture = ExtResource("4_qd2m8")

[node name="TntSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1875, 0.140625)
texture = ExtResource("4_qd2m8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6p5eu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
